Comeco do style

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        
+        <div id="pesquisa"> </div>
+    </header>
 
 
 
