--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
 <body>
     <header>
         
-        <div id="pesquisa"> </div>
+        <div id="BarraPesquisa"> </div>
+
     </header>
+    
+    <main>
+
+        <div id="part1">
+
+        </div>
+
+    </main>
 
 
 
