--- a/index.html
+++ b/index.html
@@ -9,8 +9,23 @@
 <body>
     <header>
         
-        <div id="BarraPesquisa"> </div>
+        <div id="espaco">
 
+        </div>
+
+        <div id="BarraPesquisa"> </div>
+        <div id="itens">
+            <div>
+                <p>Início</p>
+            </div>
+            <div>
+                <p>Cardápio</p>
+            </div>
+            <div>
+                <p>sobre</p>
+            </div>
+
+        </div>
     </header>
     
     <main>
